<resources>
    <string name="app_name">GeoNotes</string>
    <string name="title_footprint">My Footprint</string>
    <string name="title_notesList">Notes List</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="installGooglePlay_error">Please Install google play services to use this application</string>
    <string name="searchbar_hint">Enter address, City or Zip Code</string>
    <string name="gps_content">GPS</string>
    <string name="current_location_not_found">Unable to get current location. Using Defaults</string>
    <string name="error_retrieving_location_coordinates">Error Getting coordinates of the location. Try again later.</string>
    <string name="app_logo">App Logo</string>
    <string name="logout">Logout</string>
    <string name="or_login_screen">OR</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="email_hint">E-mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member">Already a member?</string>
    <string name="password_hint">Password</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid location details provided</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Address Found</string>
    <string name="list_item_map_view">Map View</string>
    <string name="NO_INFORMATION">Looks like there are no saved notes. Add one to see here :)</string>
    <string name="delete">DELETE</string>
    <string name="ic_my_notes">My Notes</string>
    <string name="ic_all_notes">All Notes</string>
    <string name="stackoverflow">Stackoverflow</string>
    <string name="github">Github</string>
    <string name="linkedin">LinkedIn</string>
    <string name="abhijith_sreekar">Abhijith Sreekar</string>
    <string name="developer_profile">Developer Profile</string>
    <string name="software_developer">Software Developer(Android)</string>
    <string name="singapore">Singapore</string>
    <string name="developer_description">Android Application Developer with great passion for developing applications which makes users life easy.</string>
    <string name="email_entry_message">Enter your email to reset password</string>
    <string name="error_invalid_email">Invalid Email. Please check it once again</string>
    <string name="error_user_exists">User doesn\'t exist</string>
    <string name="note_added">Note added Successfully</string>
    <string name="my_location">My Location</string>
    <string name="error_empty_title">Title cannot be empty</string>
    <string name="error_map_request">You can\'t make map requests</string>
    <string name="message_email_check">Check Your Email</string>
    <string name="message_login_success">Login successful!</string>
    <string name="error_login_fail">Login failed! Please try again later</string>
    <string name="error_missing_details_login">Please enter all details to login...</string>
    <string name="error_firebase_auth">Auth Error</string>
    <string name="message_register_email_entry">Please enter email...</string>
    <string name="message_register_password_entry">Please enter password!</string>
    <string name="message_register_success">Registration successful!</string>
    <string name="error_registration_fail">Registration failed! Please try again later</string>
    <string name="dialog_add_note_title">Add Notes</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="add_to_widget">Are you sure you want to add this note to favorite and show it on widget?</string>
    <string name="favorite_note">Favorite Note?</string>

</resources>
