<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".View.FootprintFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/aboutToolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/DeveloperProfileHeadline_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/developer_profile" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_16"
            android:src="@drawable/ic_geonotes_logo" />

        <TextView
            style="@style/DeveloperProfileName_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/abhijith_sreekar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_16"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_stackoverflow"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:contentDescription="@string/stackoverflow"
                android:src="@drawable/ic_stack_overflow" />

            <ImageView
                android:id="@+id/iv_github"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_marginEnd="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24"
                android:contentDescription="@string/github"
                android:src="@drawable/ic_github" />

            <ImageView
                android:id="@+id/iv_linkedin"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_marginEnd="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24"
                android:contentDescription="@string/linkedin"
                android:src="@drawable/ic_linkedin" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/dp_80"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/logout" />

    </LinearLayout>


</ScrollView>